--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@ body {
 	background-color: #333;
 	color: #CCC;
 }
+h1 {
+	text-align: center;
+}
 a {
 	background-image: linear-gradient(#333344,#333333);
 	color: grey;
@@ -51,13 +54,11 @@ a {
 }
 
 section {
-	border-left: 1px solid #CCC;
 	display: inline-block;
-	min-width: 150px;
-	max-width: 200px;
+	width: 200px;
 	height: 250px;
 	overflow: auto;
-	padding: 0 30px 0 30px;
+	padding: 0 20px;
 	vertical-align: top;
 }
 section h2 {
@@ -132,7 +133,6 @@ jQuery(function ($) {
 
 		$('.stackoverflow').html('Stackoverflow <span class="tag">rep:' + data.items[0].reputation + '</span>');
 	});
-	
 
 });
 </script>
