--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@ section::-webkit-scrollbar-thumb {
     box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 
+@keyframes wobble {
+  0% { transform: translateX(0%); }
+  15% { transform: translateX(-15%) rotate(-5deg); }
+  30% { transform: translateX(10%) rotate(3deg); }
+  45% { transform: translateX(-7%) rotate(-3deg); }
+  60% { transform: translateX(5%) rotate(2deg); }
+  75% { transform: translateX(-2%) rotate(-1deg); }
+  100% { transform: translateX(0%); }
+}
+
+h1:hover {
+	animation-name: wobble;
+	animation-duration: 1s;
+}
+
 body {
 	background-color: #333;
 	color: #CCC;
@@ -68,10 +83,10 @@ section h2 {
 	padding: 0 7px;
 	margin: 0 0 5px;
 	text-align: center;
-	transition: transform 1s;
+	transition: transform 0.5s;
 }
 section h2:hover {
-	transform: scale(1.3);
+	transform: scale(1.2);
 }
 section.red h2 {
 	background-image: linear-gradient(#AA6666,#FF5555);
@@ -98,6 +113,11 @@ section.yellow h2 {
 }
 a.inactive {
 	color: grey;
+}
+
+.qrcode:hover, .enlarged {
+	border: 5px solid #FFFFFF;
+	transform: scale(5);
 }
 
 footer {
@@ -139,6 +159,11 @@ jQuery(function ($) {
 	$.getJSON('https://api.stackexchange.com/2.0/users/304894?site=stackoverflow&callback=?', function(data) {
 
 		$('.stackoverflow').html('Stackoverflow <span class="tag">rep:' + data.items[0].reputation + '</span>');
+	});
+
+	// qrcode
+	$('.qrcode').click(function() {
+		$(this).toggleClass('enlarged');
 	});
 
 });
@@ -250,7 +275,7 @@ Rekommenderar att du använder någon av följande<br />
 		<br /><br />
 		<img src="http://metroroll.zencodez.net/ref/email.php" />
 
-		<img src="http://chart.apis.google.com/chart?cht=qr&chs=100x100&chl=http%3A//yap.nu&chld=H|0" alt="qrcode" width="30"/>
+		<img src="http://chart.apis.google.com/chart?cht=qr&chs=100x100&chl=http%3A//yap.nu&chld=H|0" class="qrcode" alt="qrcode" width="30"/>
 
 		<img src="http://www.gravatar.com/avatar/d400866ed03267fc211e1bdd1010ca96?s=128&d=identicon&r=PG" width="30" alt="gravatar" />
 	</p>
