Red background glow

--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@ h1:hover {
 }
 
 body {
-	background-color: #222;
+	
+	background: 
+  	-webkit-linear-gradient(130deg, #222222 48%, rgba(34,34,34,0) 95%) no-repeat,
+  	-webkit-linear-gradient(70deg, rgba(34,34,34,0) 10%, rgba(200,0,0,0.4) 40%, rgba(200,0,0,0.4) 52%, rgba(34,34,34,0) 90%) no-repeat,
+  	-webkit-linear-gradient(130deg, #222222 48%, rgba(34,34,34,0) 95%) no-repeat 240px 0
+  	;
+  ;
+background-size: 200px 200px;
+background-color: #222;
 	color: #CCC;
 }
 h1 {
