Add Heroes of Conquest link

--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@ Rekommenderar att du använder någon av följande<br />
 		<li><a href="http://blogg.zida.se/" class="bloggzida inactive">Blogg zida</a></li>
 		<li><a href="http://apps.facebook.com/debattera/" class="debattera inactive">Debattera <span class="tag">Facebook</span></a></li>
 		<li><a href="http://apps.facebook.com/devtools/" class="devtools inactive">Developer Tools <span class="tag">Facebook</span></a></li>
+		<li><a href="http://hoc.zencodez.net/" class="heroesofconquest inactive">Heroes of Conquest <span class="tag">Game</span></a></li>
 	</ul>
 
 </section>
