Added Battery Time Remaining link

--- a/index.html
+++ b/index.html
@@ -247,12 +247,11 @@ Rekommenderar att du använder någon av följande<br />
 	<h2>Latest</h2>
 	<span class="sort">Sort by: Update</span>
 	<ul>
+		<li><a href="https://github.com/codler/Battery-Time-Remaining" class="batterytimeremaining">Battery Time Remaining  <span class="tag">Mac app</span></a></li>
 		<li><a href="http://venty.se" class="venty">Venty  <span class="tag">Website</span></a></li>
 		<li><a href="http://codler.github.com/BombCarrier/" class="bombcarrier">BombCarrier  <span class="tag">Game</span></a></li>
 		<li><a href="https://github.com/codler/Startup" class="startup">Startup  <span class="tag">PHP Framework</span></a></li>
 	</ul>
-	<span class="sort">Upcoming</span>
-	<li>iPhone app</li>
 </section>
 
 <section class="blue">
@@ -299,7 +298,7 @@ Rekommenderar att du använder någon av följande<br />
 
 	<span class="sort">Facebook app</span>
 	<ul>
-		<li><a href="http://apps.facebook.com/aldstayngstavan/" class="aldstayngstavan">Vem är din äldsta/yngsta vän?</a></li>
+		<li><a href="https://apps.facebook.com/aldstayngstavan/" class="aldstayngstavan">Vem är din äldsta/yngsta vän?</a></li>
 	</ul>
 
 	<span class="sort">jQuery plugins</span>
