Verify webmaster tools

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!-- meta -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
+<meta name="google-site-verification" content="z9g0GdYqfjWGG_1VSGXbcz17fyL1rlV2aMtWdlbdky0" />
 
 <title>Han Lin Yap</title>
 <!-- css -->
