record outbound link

--- a/battery-time-remaining/index.html
+++ b/battery-time-remaining/index.html
@@ -8,7 +8,7 @@
 
 <title>Battery Time Remaining</title>
 
-<script type="text/javascript">
+<script>
 var _gaq = _gaq || [];
 _gaq.push(['_setAccount', 'UA-1944741-6']);
 _gaq.push(['_setDomainName', 'yap.nu']);
@@ -19,6 +19,13 @@ _gaq.push(['_trackPageview']);
 	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 })();
+
+function recordOutboundLink(link, data) {
+	try {
+		_gaq.push(data);
+		setTimeout('document.location = "' + link.href + '"', 100)
+	}catch(err){}
+}
 </script>
 </head>
 <body>
@@ -40,7 +47,7 @@ Recommend that you use one of the following<br />
 
 <strong>
 	Latest 
-	<a href="http://yap.nu/battery-time-remaining/download/Battery Time Remaining-1.6.1.zip" onclick="_gaq.push(['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.1.zip'])">Battery Time Remaining-1.6.1.zip</a> +10,141 downloads
+	<a href="download/Battery Time Remaining-1.6.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.1.zip']);return false;">Battery Time Remaining-1.6.1.zip</a> +10,141 downloads
 	<br />
 </strong>
 
@@ -48,37 +55,37 @@ Recommend that you use one of the following<br />
 
 <div id="download-more" style="display:none;">
 
-	<a href="http://yap.nu/battery-time-remaining/download/Battery Time Remaining-1.6.zip" onclick="_gaq.push(['_trackEvent', 'Battery-Timeemaining', 'download', 'Battery Time Remaining-1.6.zip'])">Battery Time Remaining-1.6.zip</a> +6,654 downloads
+	<a href="download/Battery Time Remaining-1.6.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Timeemaining', 'download', 'Battery Time Remaining-1.6.zip']);return false;">Battery Time Remaining-1.6.zip</a> +6,654 downloads
 	<br />
 
-	<a href="http://yap.nu/battery-time-remaining/download/Battery Time Remaining-1.5.2.zip" onclick="_gaq.push(['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.5.2.zip'])">Battery Time Remaining-1.5.2.zip</a> +10,932 downloads
+	<a href="download/Battery Time Remaining-1.5.2.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.5.2.zip']);return false;">Battery Time Remaining-1.5.2.zip</a> +10,932 downloads
 	<br />
 
-	<a href="http://yap.nu/battery-time-remaining/download/Battery Time Remaining-1.5.1.zip" onclick="_gaq.push(['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.5.1.zip'])">Battery Time Remaining-1.5.1.zip</a> +7,657 downloads
+	<a href="download/Battery Time Remaining-1.5.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.5.1.zip']);return false;">Battery Time Remaining-1.5.1.zip</a> +7,657 downloads
 	<br />
 
-	<a href="http://yap.nu/battery-time-remaining/download/Battery Time Remaining-1.5.zip" onclick="_gaq.push(['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.5.zip'])">Battery Time Remaining-1.5.zip</a> +1,562 downloads
+	<a href="download/Battery Time Remaining-1.5.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.5.zip']);return false;">Battery Time Remaining-1.5.zip</a> +1,562 downloads
 	<br />
 
-	<a href="http://yap.nu/battery-time-remaining/download/Battery Time Remaining-1.4.zip" onclick="_gaq.push(['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.4.zip'])">Battery Time Remaining-1.4.zip</a> +573 downloads
+	<a href="download/Battery Time Remaining-1.4.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.4.zip']);return false;">Battery Time Remaining-1.4.zip</a> +573 downloads
 	<br />
 
-	<a href="http://yap.nu/battery-time-remaining/download/Battery Time Remaining-1.3.zip" onclick="_gaq.push(['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.3.zip'])">Battery Time Remaining-1.3.zip</a> +486 downloads
+	<a href="download/Battery Time Remaining-1.3.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.3.zip']);return false;">Battery Time Remaining-1.3.zip</a> +486 downloads
 	<br />
 
-	<a href="http://yap.nu/battery-time-remaining/download/Battery Time Remaining-1.2.1.zip" onclick="_gaq.push(['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.2.1.zip'])">Battery Time Remaining-1.2.1.zip</a> +632 downloads
+	<a href="download/Battery Time Remaining-1.2.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.2.1.zip']);return false;">Battery Time Remaining-1.2.1.zip</a> +632 downloads
 	<br />
 
-	<a href="http://yap.nu/battery-time-remaining/download/Battery Time Remaining-1.2.zip" onclick="_gaq.push(['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.2.zip'])">Battery Time Remaining-1.2.zip</a> +774 downloads
+	<a href="download/Battery Time Remaining-1.2.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.2.zip']);return false;">Battery Time Remaining-1.2.zip</a> +774 downloads
 	<br />
 
-	<a href="http://yap.nu/battery-time-remaining/download/Battery Time Remaining-1.1.1.zip" onclick="_gaq.push(['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.1.1.zip'])">Battery Time Remaining-1.1.1.zip</a> +127 downloads
+	<a href="download/Battery Time Remaining-1.1.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.1.1.zip']);return false;">Battery Time Remaining-1.1.1.zip</a> +127 downloads
 	<br />
 
-	<a href="http://yap.nu/battery-time-remaining/download/Battery Time Remaining-1.1.zip" onclick="_gaq.push(['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.1.zip'])">Battery Time Remaining-1.1.zip</a> +65 downloads
+	<a href="download/Battery Time Remaining-1.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.1.zip']);return false;">Battery Time Remaining-1.1.zip</a> +65 downloads
 	<br />
 
-	<a href="http://yap.nu/battery-time-remaining/download/Battery Time Remaining-1.0.zip" onclick="_gaq.push(['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.0.zip'])">Battery Time Remaining-1.0.zip</a> +142 downloads
+	<a href="download/Battery Time Remaining-1.0.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.0.zip']);return false;">Battery Time Remaining-1.0.zip</a> +142 downloads
 	<br />
 
 </div>
