--- a/battery-time-remaining/index.html
+++ b/battery-time-remaining/index.html
@@ -47,13 +47,16 @@ Recommend that you use one of the following<br />
 
 <strong>
 	Latest 
-	<a href="download/Battery Time Remaining-1.6.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.1.zip']);return false;">Battery Time Remaining-1.6.1.zip</a> +10,141 downloads
+	<a href="download/Battery Time Remaining-1.6.2.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.2.zip']);return false;">Battery Time Remaining-1.6.2.zip</a>
 	<br />
 </strong>
 
 <a href="" onclick="document.getElementById('download-more').style.display='block';this.parentNode.removeChild(this);return false;">Show more</a>
 
 <div id="download-more" style="display:none;">
+
+	<a href="download/Battery Time Remaining-1.6.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.1.zip']);return false;">Battery Time Remaining-1.6.1.zip</a> +10,141 downloads
+	<br />
 
 	<a href="download/Battery Time Remaining-1.6.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Timeemaining', 'download', 'Battery Time Remaining-1.6.zip']);return false;">Battery Time Remaining-1.6.zip</a> +6,654 downloads
 	<br />
