--- a/battery-time-remaining/index.html
+++ b/battery-time-remaining/index.html
@@ -4,7 +4,7 @@
 <!-- meta -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 <title>Battery Time Remaining</title>
 
@@ -29,25 +29,14 @@ function recordOutboundLink(link, data) {
 </script>
 </head>
 <body>
-<!--[if lt IE 9]>
-<div id="browser-msie">
-<p>You are using Internet Explorer<br />
-Recommend that you use one of the following<br />
-<a href="http://www.google.com/chrome"><img border="0" width="128" height="128" src="../img/Chrome.png" title="Chrome" /></a>
-<a href="http://www.mozilla.com?from=sfx&amp;uid=188254&amp;t=561"><img border="0" width="128" height="128" src="../img/Firefox.png" title="Firefox" /></a>
-<a href="http://www.opera.com/"><img border="0" width="128" height="128" src="../img/Opera.png" title="Opera" /></a>
-</p>
-</div>
-<![endif]-->
 
 <h1>Battery Time Remaining</h1>
-<p>This page will be the new download page for this app, due to Github are <a href="https://github.com/blog/1302-goodbye-uploads">deprecating</a> the old download page</p>
 
-<h2>Download</h2>
+<h2>Download or get from <a href="macappstore://itunes.apple.com/app/id665678267?mt=12">App Store</a></h2>
 
 <strong>
 	Latest 
-	<a href="download/Battery Time Remaining-1.6.2.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.2.zip']);return false;">Battery Time Remaining-1.6.2.zip</a>
+	<a href="download/Battery Time Remaining-1.6.3.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.3.zip']);return false;">Battery Time Remaining-1.6.3.zip</a>
 	<br />
 </strong>
 
@@ -55,40 +44,43 @@ Recommend that you use one of the following<br />
 
 <div id="download-more" style="display:none;">
 
-	<a href="download/Battery Time Remaining-1.6.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.1.zip']);return false;">Battery Time Remaining-1.6.1.zip</a> +13,042 downloads
+	<a href="download/Battery Time Remaining-1.6.2.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.2.zip']);return false;">Battery Time Remaining-1.6.2.zip</a> +2,442 downloads
 	<br />
 
-	<a href="download/Battery Time Remaining-1.6.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Timeemaining', 'download', 'Battery Time Remaining-1.6.zip']);return false;">Battery Time Remaining-1.6.zip</a> +6,699 downloads
+	<a href="download/Battery Time Remaining-1.6.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.1.zip']);return false;">Battery Time Remaining-1.6.1.zip</a> +16,329 downloads
 	<br />
 
-	<a href="download/Battery Time Remaining-1.5.2.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.5.2.zip']);return false;">Battery Time Remaining-1.5.2.zip</a> +10,978 downloads
+	<a href="download/Battery Time Remaining-1.6.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Timeemaining', 'download', 'Battery Time Remaining-1.6.zip']);return false;">Battery Time Remaining-1.6.zip</a> +6,751 downloads
 	<br />
 
-	<a href="download/Battery Time Remaining-1.5.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.5.1.zip']);return false;">Battery Time Remaining-1.5.1.zip</a> +7,714 downloads
+	<a href="download/Battery Time Remaining-1.5.2.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.5.2.zip']);return false;">Battery Time Remaining-1.5.2.zip</a> +11,020 downloads
 	<br />
 
-	<a href="download/Battery Time Remaining-1.5.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.5.zip']);return false;">Battery Time Remaining-1.5.zip</a> +1,573 downloads
+	<a href="download/Battery Time Remaining-1.5.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.5.1.zip']);return false;">Battery Time Remaining-1.5.1.zip</a> +7,851 downloads
 	<br />
 
-	<a href="download/Battery Time Remaining-1.4.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.4.zip']);return false;">Battery Time Remaining-1.4.zip</a> +584 downloads
+	<a href="download/Battery Time Remaining-1.5.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.5.zip']);return false;">Battery Time Remaining-1.5.zip</a> +1,583 downloads
 	<br />
 
-	<a href="download/Battery Time Remaining-1.3.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.3.zip']);return false;">Battery Time Remaining-1.3.zip</a> +496 downloads
+	<a href="download/Battery Time Remaining-1.4.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.4.zip']);return false;">Battery Time Remaining-1.4.zip</a> +593 downloads
 	<br />
 
-	<a href="download/Battery Time Remaining-1.2.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.2.1.zip']);return false;">Battery Time Remaining-1.2.1.zip</a> +640 downloads
+	<a href="download/Battery Time Remaining-1.3.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.3.zip']);return false;">Battery Time Remaining-1.3.zip</a> +501 downloads
 	<br />
 
-	<a href="download/Battery Time Remaining-1.2.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.2.zip']);return false;">Battery Time Remaining-1.2.zip</a> +777 downloads
+	<a href="download/Battery Time Remaining-1.2.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.2.1.zip']);return false;">Battery Time Remaining-1.2.1.zip</a> +642 downloads
 	<br />
 
-	<a href="download/Battery Time Remaining-1.1.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.1.1.zip']);return false;">Battery Time Remaining-1.1.1.zip</a> +133 downloads
+	<a href="download/Battery Time Remaining-1.2.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.2.zip']);return false;">Battery Time Remaining-1.2.zip</a> +781 downloads
 	<br />
 
-	<a href="download/Battery Time Remaining-1.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.1.zip']);return false;">Battery Time Remaining-1.1.zip</a> +69 downloads
+	<a href="download/Battery Time Remaining-1.1.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.1.1.zip']);return false;">Battery Time Remaining-1.1.1.zip</a> +136 downloads
 	<br />
 
-	<a href="download/Battery Time Remaining-1.0.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.0.zip']);return false;">Battery Time Remaining-1.0.zip</a> +171 downloads
+	<a href="download/Battery Time Remaining-1.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.1.zip']);return false;">Battery Time Remaining-1.1.zip</a> +75 downloads
+	<br />
+
+	<a href="download/Battery Time Remaining-1.0.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.0.zip']);return false;">Battery Time Remaining-1.0.zip</a> +203 downloads
 	<br />
 
 </div>
