record outbound link

--- a/battery-time-remaining/index.html
+++ b/battery-time-remaining/index.html
@@ -32,7 +32,7 @@ function recordOutboundLink(link, data) {
 
 <h1>Battery Time Remaining</h1>
 
-<h2>Download or get from <a href="macappstore://itunes.apple.com/app/id665678267?mt=12">App Store</a></h2>
+<h2>Download or get from <a href="macappstore://itunes.apple.com/app/id665678267?mt=12" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'App Store']);return false;">App Store</a></h2>
 
 <strong>
 	Latest 
