New release, Battery Time 2 2.0

--- a/battery-time-remaining/index.html
+++ b/battery-time-remaining/index.html
@@ -30,9 +30,19 @@ function recordOutboundLink(link, data) {
 </head>
 <body>
 
-<h1>Battery Time Remaining</h1>
+<h1>Battery Time 2</h1>
 
 <h2>Download or get from <a href="macappstore://itunes.apple.com/app/id665678267?mt=12" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'App Store']);return false;">App Store</a></h2>
+
+<strong>
+	Latest 
+	<a href="download/Battery Time 2-2.0.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time 2-2.0.zip']);return false;">Battery Time 2-2.0.zip</a>
+	<br />
+</strong>
+
+<h1>Battery Time Remaining</h1>
+
+<h2>Download or get from <a href="macappstore://itunes.apple.com/app/id551420833?mt=12" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'App Store']);return false;">App Store</a></h2>
 
 <strong>
 	Latest 
