New release, Battery Time Remaining 2 2.0.1

--- a/battery-time-remaining/index.html
+++ b/battery-time-remaining/index.html
@@ -30,15 +30,24 @@ function recordOutboundLink(link, data) {
 </head>
 <body>
 
-<h1>Battery Time 2</h1>
+<h1>Battery Time Remaining 2</h1>
 
 <h2>Download or get from <a href="macappstore://itunes.apple.com/app/id665678267?mt=12" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'App Store']);return false;">App Store</a></h2>
 
 <strong>
 	Latest 
-	<a href="download/Battery Time 2-2.0.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time 2-2.0.zip']);return false;">Battery Time 2-2.0.zip</a>
+	<a href="download/Battery Time Remaining 2-2.0.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining 2-2.0.1.zip']);return false;">Battery Time Remaining 2-2.0.1.zip</a>
 	<br />
 </strong>
+
+<a href="" onclick="document.getElementById('download-more2').style.display='block';this.parentNode.removeChild(this);return false;">Show more</a>
+
+<div id="download-more2" style="display:none;">
+
+	<a href="download/Battery Time 2-2.0.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time 2-2.0.zip']);return false;">Battery Time 2-2.0.zip</a>
+	<br /> +289 downloads
+
+</div>
 
 <h1>Battery Time Remaining</h1>
 
@@ -46,13 +55,16 @@ function recordOutboundLink(link, data) {
 
 <strong>
 	Latest 
-	<a href="download/Battery Time Remaining-1.6.3.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.3.zip']);return false;">Battery Time Remaining-1.6.3.zip</a>
+	<a href="download/Battery Time Remaining-1.6.4.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.4.zip']);return false;">Battery Time Remaining-1.6.4.zip</a>
 	<br />
 </strong>
 
 <a href="" onclick="document.getElementById('download-more').style.display='block';this.parentNode.removeChild(this);return false;">Show more</a>
 
 <div id="download-more" style="display:none;">
+
+	<a href="download/Battery Time Remaining-1.6.3.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.3.zip']);return false;">Battery Time Remaining-1.6.3.zip</a> +728 downloads
+	<br />
 
 	<a href="download/Battery Time Remaining-1.6.2.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.2.zip']);return false;">Battery Time Remaining-1.6.2.zip</a> +2,442 downloads
 	<br />
