New portfolio for 2013! Move old to 2012 and add some really old websites.

--- a/index.html
+++ b/index.html
@@ -1,358 +1,5 @@
 <!DOCTYPE html>
-<html lang="sv">
-<head>
-<!-- meta -->
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width" />
-<meta name="google-site-verification" content="z9g0GdYqfjWGG_1VSGXbcz17fyL1rlV2aMtWdlbdky0" />
-
 <title>Han Lin Yap</title>
-<!-- css -->
-<link rel="stylesheet" type="text/css" href="css/global-3.0.css" />
-
-<!-- javascript -->
-<script src="js/jquery-1.7.2.min.js"></script>
-<script src="js/jquery.css3finalize-2.3.min.js"></script>
-<script src="js/modernizr-2.5.3.min.js"></script>
-<!--[if IE 8 ]><![endif]-->
-<style>
-section::-webkit-scrollbar {
-    width: 10px;
-}
-section::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    border-radius: 10px;
-}
-section::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background: rgba(255,255,255,0.8); 
-    box-shadow: inset 0 0 1px rgba(0,0,0,0.5); 
-}
-
-@keyframes wobble {
-  0% { transform: translateX(0%); }
-  15% { transform: translateX(-15%) rotate(-5deg); }
-  30% { transform: translateX(10%) rotate(3deg); }
-  45% { transform: translateX(-7%) rotate(-3deg); }
-  60% { transform: translateX(5%) rotate(2deg); }
-  75% { transform: translateX(-2%) rotate(-1deg); }
-  100% { transform: translateX(0%); }
-}
-
-h1:hover {
-	animation-name: wobble;
-	animation-duration: 1s;
-}
-
-body {
-	
-	background: 
-  	-webkit-linear-gradient(130deg, #222222 48%, rgba(34,34,34,0) 95%) no-repeat,
-  	-webkit-linear-gradient(70deg, rgba(34,34,34,0) 10%, rgba(200,0,0,0.4) 40%, rgba(200,0,0,0.4) 52%, rgba(34,34,34,0) 90%) no-repeat,
-  	-webkit-linear-gradient(130deg, #222222 48%, rgba(34,34,34,0) 95%) no-repeat 240px 0
-  	;
-  ;
-background-size: 200px 200px;
-background-color: #222;
-	color: #CCC;
-}
-h1 {
-	text-align: center;
-}
-a {
-	color: grey;
-	text-decoration: none;
-}
-.red a:hover,
-.blue a:hover,
-.green a:hover,
-.yellow a:hover,
-a:hover, a.inactive:hover {
-	text-decoration: underline;
-}
-.red a {
-	color: red;
-}
-.blue a {
-	color: lightblue;
-}
-.green a {
-	color: lightgreen;
-}
-.yellow a {
-	color: yellow;
-}
-
-section {
-	display: inline-block;
-	width: 200px;
-	height: 250px;
-	overflow: auto;
-	padding: 0 15px;
-	vertical-align: top;
-	margin: 0 5px 5px;
-}
-
-section h2 {
-	background-image: linear-gradient(#BBBBBB,#AAAAAA);
-	border-radius: 3px;
-	color: #ffffff;
-	padding: 0 7px;
-	margin: 0 0 5px;
-	text-align: center;
-	transition: transform 0.5s;
-}
-section h2:hover {
-	transform: scale(0.95);
-}
-section.red h2 {
-	background-image: linear-gradient(#BB6666,#FF5555);
-}
-section.blue h2 {
-	background-image: linear-gradient(#6666BB,#5555FF);
-}
-section.green h2 {
-	background-image: linear-gradient(#66BB66,#55FF55);
-}
-section.yellow h2 {
-	background-image: linear-gradient(#BBBB66,#FFFF55);
-}
-
-.sort {
-	font-size: 11px;
-}
-.tag {
-	background-color: #000000;
-	border-radius: 2px;
-	color: #FFFFFF;
-	font-size: 9px;
-	padding: 1px 3px 0;
-}
-a.inactive {
-	color: grey;
-}
-
-.enlarged {
-	border: 5px solid #FFFFFF;
-	transform: scale(5);
-}
-
-footer {
-	border-top: 1px solid #CCC;
-	padding: 5px 0 0 20px;
-	margin-top: 5px;
-}
-
-/* iPhone */
-@media screen and (max-width: 480px) and (max-height: 480px) {
-	header {
-		position: absolute;
-		top: 60px;
-		left: -70px;
-		transform: rotate(-90deg);
-		filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=4);
-		display: inline-block;
-	}
-
-	section h2:hover {
-		transform: none;
-	}
-
-	#content {
-		display: inline-block;
-		width: 1300px;
-		margin-left: 30px;
-	}
-
-	footer {
-		padding: 0;
-	}
-}
-
-/* iPad */
-@media screen and (max-width: 1024px) and (max-height: 768px) and (min-height: 500px) {
-	section {
-		height: 170px;
-	}
-}
-</style>
-<script>
-jQuery(function ($) {
-
-	// Facebook
-	$.getJSON('https://graph.facebook.com/211587045382?callback=?', function(data) {
-
-		$('.aldstayngstavan').html('Vem är din äldsta/yngsta vän? <span class="tag">daily users:' + data.daily_active_users + '</span>');
-
-	});
-
-	// Github
-	$.getJSON('https://api.github.com/users/codler/repos?per_page=100&callback=?', function(data) {
-
-		// Filter forks
-		data = $.grep(data.data, function(i) { return !i.fork });
-		data = data.sort(function(a, b) { return a.pushed_at > b.pushed_at ? -1 : 1 });
-		
-		var html = '';
-		
-		$(data).each(function(k, v) {
-			if (v.watchers > 1) {
-				html += '<li><a href="' + v.html_url + '">' + v.name + ' <span class="tag">' + v.language + '</span> <span class="tag">watcher:' + v.watchers + '</span></a></li>';	
-			} else {
-				html += '<li><a href="' + v.html_url + '">' + v.name + ' <span class="tag">' + v.language + '</span></a></li>';	
-			}			
-		});
-
-		$('#repos').text('').append(html);
-		$('.github').html('Github <span class="tag">repos:' + data.length + '</span>');
-	});
-	
-	// Stackoverflow
-	$.getJSON('https://api.stackexchange.com/2.0/users/304894?site=stackoverflow&callback=?', function(data) {
-		if (!data.error_id) {
-			$('.stackoverflow').html('Stackoverflow <span class="tag">rep:' + data.items[0].reputation + '</span>');
-		}
-	});
-
-	// qrcode
-	$('.qrcode').click(function() {
-		$(this).toggleClass('enlarged');
-	}).hover(function() {
-		$(this).addClass('enlarged');
-	}, function() {
-		$(this).removeClass('enlarged');
-	});
-
-});
-</script>
-</head>
-<body>
-<!--[if lt IE 9]>
-<div id="browser_msie">
-<p>Du använder Internet Explorer<br />
-Rekommenderar att du använder någon av följande<br />
-<a href="http://www.google.com/chrome"><img border="0" width="128" height="128" src="img/Chrome.png" title="Chrome" /></a>
-<a href="http://www.mozilla.com?from=sfx&amp;uid=188254&amp;t=561"><img border="0" width="128" height="128" src="img/Firefox.png" title="Firefox" /></a>
-<a href="http://www.opera.com/"><img border="0" width="128" height="128" src="img/Opera.png" title="Opera" /></a>
-<a href="http://www.apple.com/safari/"><img border="0" width="128" height="128" src="img/Safari.png" title="Safari" /></a>
-</p>
-</div>
-<![endif]-->
-
-<header>
-	<h1>Han Lin Yap</h1>
-</header>
-
-<div id="content">
-<section class="red">
-	<h2>Latest</h2>
-	<span class="sort">Sort by: Update</span>
-	<ul>
-		<li><a href="https://github.com/codler/Battery-Time-Remaining" class="batterytimeremaining">Battery Time Remaining  <span class="tag">Mac app</span></a></li>
-		<li><a href="http://venty.se" class="venty">Venty  <span class="tag">Website</span></a></li>
-		<li><a href="http://codler.github.com/BombCarrier/" class="bombcarrier">BombCarrier  <span class="tag">Game</span></a></li>
-		<li><a href="https://github.com/codler/Startup" class="startup">Startup  <span class="tag">PHP Framework</span></a></li>
-	</ul>
-</section>
-
-<section class="blue">
-	<h2>Profiles</h2>
-	<span class="sort">Sort by: A-Z</span>
-	<ul>
-		<li><a href="http://codler.blogspot.com" class="blogger">Blogger</a></li>
-		<li><a href="https://github.com/codler" class="github">Github</a></li>
-		<li><a href="http://stackoverflow.com/users/304894/codler" class="stackoverflow">Stackoverflow</a></li>
-	</ul>
-
-	<span class="sort">Games</span>
-	<ul>
-		<li><a href="http://steamcommunity.com/profiles/76561197974890217/" class="steam">Steam</a></li>
-	</ul>
-
-	<span class="sort">Inactive</span>
-	<ul>
-		<li><a href="http://eforum.idg.se/user/44585-codler/" class="eforum inactive">Eforum</a></li>
-		<li><a href="http://www.inviteshare.com/viewprofile.php?id=11119" class="inviteshare inactive">InviteShare</a></li>
-		<li><a href="http://userscripts.org/users/codler" class="userscripts inactive">Userscripts</a></li>
-		<li><a href="http://www.wowhead.com/user=codler#characters" class="wowhead inactive">Wowhead</a></li>
-		<li><a href="http://www.xfire.com/profile/darkluna/" class="xfire inactive">Xfire</a></li>
-	</ul>
-</section>
-
-<section class="green">
-	<h2>Repositories</h2>
-	<span class="sort">Sort by: Update</span>
-	<ul id="repos">
-		<li><a href="https://github.com/codler/jQuery-Css3-Finalize" class="css3finalize">jQuery Css3 finalize <span class="tag">JavaScript</span></a></li>
-	</ul>
-</section>
-
-<section class="yellow">
-	<h2>Websites</h2>
-	<span class="sort">Sort by: A-Z</span>
-	<ul>
-		<li><a href="http://ingrediens.se/" class="ingrediens">Ingrediens</a></li>
-		<li><a href="http://jaggillarattgilla.se/" class="jaggillarattgilla">Jag gillar att gilla</a></li>
-		<li><a href="http://metroroll.zencodez.net/" class="metroroll">Metroroll</a></li>
-		<li><a href="http://venty.se" class="venty">Venty</a></li>
-	</ul>
-
-	<span class="sort">Facebook app</span>
-	<ul>
-		<li><a href="https://apps.facebook.com/aldstayngstavan/" class="aldstayngstavan">Vem är din äldsta/yngsta vän?</a></li>
-	</ul>
-
-	<span class="sort">jQuery plugins</span>
-	<ul>
-		<li><a href="https://github.com/codler/jQuery-Css3-Finalize" class="css3finalize">Css3 finalize</a></li>
-	</ul>
-
-	<span class="sort">Inactive</span>
-	<ul>
-		<li><a href="https://github.com/codler/jQuery-Ajax-Upload" class="ajaxupload inactive">Ajax Upload <span class="tag">jQuery</span></a></a></li>
-		<li><a href="http://blogg.zida.se/" class="bloggzida inactive">Blogg zida</a></li>
-		<li><a href="http://apps.facebook.com/debattera/" class="debattera inactive">Debattera <span class="tag">Facebook</span></a></li>
-		<li><a href="http://apps.facebook.com/devtools/" class="devtools inactive">Developer Tools <span class="tag">Facebook</span></a></li>
-		<li><a href="http://hoc.zencodez.net/" class="heroesofconquest inactive">Heroes of Conquest <span class="tag">Game</span></a></li>
-	</ul>
-
-</section>
-
-<section>
-	<h2>Old portfolio</h2>
-	<span class="sort">Sort by: Update</span>
-	<ul>
-		<li><a href="http://project.zencodez.net/">Projects 3</a></li>
-		<li><a href="http://project.zencodez.net/old_index2.php">Projects 2</a></li>
-		<li><a href="http://project.zencodez.net/old_index1.html">Projects 1</a></li>
-	</ul>
-</section>
-</div>
-
-<footer>
-	<p><a href="http://yap.nu">Yap.nu</a> Last modified 2012-03-23
-		<br />
-		<img src="http://metroroll.zencodez.net/ref/email.php" />
-
-		<img src="http://chart.apis.google.com/chart?cht=qr&chs=100x100&chl=http%3A//yap.nu&chld=H|0" class="qrcode" alt="qrcode" width="30"/>
-
-		<img src="http://www.gravatar.com/avatar/d400866ed03267fc211e1bdd1010ca96?s=128&d=identicon&r=PG" width="30" alt="gravatar" />
-	</p>
-</footer>
-
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-1944741-6']);
-  _gaq.push(['_setDomainName', 'yap.nu']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url=2013/" />
+<h1>Han Lin Yap</h1>
+<p>Go to <a href="2013/">main</a> page</p>
