--- a/battery-time-remaining/index.html
+++ b/battery-time-remaining/index.html
@@ -36,13 +36,16 @@ function recordOutboundLink(link, data) {
 
 <strong>
 	Latest 
-	<a href="download/Battery Time Remaining 2-2.0.2.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining 2-2.0.2.zip']);return false;">Battery Time Remaining 2-2.0.2.zip</a>
+	<a href="download/Battery Time Remaining 2-3.0.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining 2-3.0.zip']);return false;">Battery Time Remaining 2-3.0.zip</a>
 	<br />
 </strong>
 
 <a href="" onclick="document.getElementById('download-more2').style.display='block';this.parentNode.removeChild(this);return false;">Show more</a>
 
 <div id="download-more2" style="display:none;">
+
+	<a href="download/Battery Time Remaining 2-2.0.2.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining 2-2.0.2.zip']);return false;">Battery Time Remaining 2-2.0.2.zip</a> +3,187 downloads
+	<br />
 
 	<a href="download/Battery Time Remaining 2-2.0.1.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining 2-2.0.1.zip']);return false;">Battery Time Remaining 2-2.0.1.zip</a> +706 downloads
 	<br />
@@ -58,13 +61,16 @@ function recordOutboundLink(link, data) {
 
 <strong>
 	Latest 
-	<a href="download/Battery Time Remaining-1.6.5.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.5.zip']);return false;">Battery Time Remaining-1.6.5.zip</a>
+	<a href="download/Battery Time Remaining-1.7.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.7.zip']);return false;">Battery Time Remaining-1.7.zip</a>
 	<br />
 </strong>
 
 <a href="" onclick="document.getElementById('download-more').style.display='block';this.parentNode.removeChild(this);return false;">Show more</a>
 
 <div id="download-more" style="display:none;">
+
+	<a href="download/Battery Time Remaining-1.6.5.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.5.zip']);return false;">Battery Time Remaining-1.6.5.zip</a> +403 downloads
+	<br />
 
 	<a href="download/Battery Time Remaining-1.6.4.zip" onclick="recordOutboundLink(this,['_trackEvent', 'Battery-Time-Remaining', 'download', 'Battery Time Remaining-1.6.4.zip']);return false;">Battery Time Remaining-1.6.4.zip</a> +78 downloads
 	<br />
